Fix vertical scroll flicker

--- a/src/index.css
+++ b/src/index.css
@@ -122,12 +122,3 @@
     @apply bg-background text-foreground;
   }
 }
-
-html {
-  scrollbar-width: none;
-}
-
-/* Hides scrollbar for Chrome, Safari and Opera */
-body::-webkit-scrollbar {
-  display: none;
-}
